# lab08

./: Dockerfile
.github/workflows/: tp-lab-actions.yml
formatter_ex_lib/formatter/: Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
hello_world_application/formatter_ex/: Makefile  cmake_install.cmake
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
